<resources>
    <string name="app_name">MaintainING</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_work_order">WorkOrder</string>
    <string name="title_activity_work_order_item">WorkOrder Item</string>
    <string name="title_activity_comment">Comment</string>
    <string name="title_activity_environmental_conditions">Environmental Condition</string>
    <string name="title_activity_material">Material</string>
    <string name="title_activity_equipment">Equipment</string>
    <string name="title_activity_work_equipment">Work Equipment</string>
    <string name="title_activity_files">Files</string>
    <string name="title_activity_time_report">Time Report</string>
    <string name="title_activity_task">Task</string>
    <string name="title_activity_export">Export Work Report</string>
    <string name="title_activity_login">Login</string>
    <string name="title_dialog_employee">Select Employee</string>
    <string name="title_dialog_attachment_select">Select Attachment</string>
    <string name="title_dialog_attachment_new">New Attachment</string>
    <string name="title_dialog_close_work_order">Close Work Order</string>
    <string name="title_dialog_close_work_order_item">Close Work Order Item</string>
    <string name="info_developed">Developed by</string>
    <string name="info_developer">Jonas Mahlke</string>
    <string name="info_cooperate">in cooperation with</string>
    <string name="info_libraries">Used third party open source libraries:</string>
    <string name="info_ormlite">ORMLite</string>
    <string name="info_apache">Apache Commons IO, Lang3, SimpleXML, ZXing</string>
    <string name="info_picasso">Picasso</string>
    <string name="import_running">Import in progress</string>
    <string name="import_finished">Import finished</string>
    <string name="import_failed">Import failed</string>
    <string name="export_running">Export in progress</string>
    <string name="export_finished">Export finished</string>
    <string name="export_failed">Export failed</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_scan">Scan code</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_attachment">Attachment</string>
    <string name="dialog_attachment_name">Attachment Name</string>
    <string name="dialog_attachment_description">Attachment Description</string>
    <string name="dialog_attachment_file_name">Filename</string>
    <string name="dialog_attachment_file_description">File Description</string>
    <string name="dialog_close_work_order">Do you want to leave the current work order?</string>
    <string name="dialog_close_work_order_item">Do you want to leave the current work order item?</string>
    <string name="toast_file_name_exists">A file with this filename already exists. Please choose another filename.</string>
    <string name="action_camera">Take a picture</string>
    <string name="action_delete">Delete</string>
    <string name="action_flashlight_on">Turn the flashlight on</string>
    <string name="action_flashlight_off">Turn the flashlight off</string>
    <string name="action_record">Record audio</string>
    <string name="action_scan_code">Scan code</string>
    <string name="action_sort">Sort by</string>
    <string name="action_sort_by_date">Sort by Date</string>
    <string name="action_sort_by_id">Sort by ID</string>
    <string name="context_delete">Delete Work Order</string>
    <string name="work_item_material">Materials</string>
    <string name="work_item_equipment">Equipments</string>
    <string name="work_item_measurement">Measurements</string>
    <string name="work_item_work_equipments">Work Equipments</string>
    <string name="drawer_work_order_overview">Work Order Overview</string>
    <string name="drawer_vehicle_inventory">Vehicle Inventory</string>
    <string name="drawer_knowledge_basement">Knowledge Basement</string>
    <string name="drawer_scheduling">Scheduling</string>
    <string name="drawer_import">Import gsp File</string>
    <string name="drawer_export">Export gsp File</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_info">Info</string>
    <string name="drawer_order_information">Work Order Information</string>
    <string name="drawer_order_power_plant">Power Plant Information</string>
    <string name="drawer_order_energy_system">Energy System Information</string>
    <string name="drawer_contact">Contact</string>
    <string name="drawer_order_work_history">Work History</string>
    <string name="drawer_times">Time Reports</string>
    <string name="drawer_wizard">Wizard</string>
    <string name="drawer_order_item_information">Work Order Item Information</string>
    <string name="drawer_assigned_element">Assigned Element</string>
    <string name="drawer_attachments">Attachments</string>
    <string name="drawer_task_information">Task Information</string>
    <string name="drawer_task_work_equipments">Work Equipments</string>
    <string name="button_start">Start Work Order</string>
    <string name="button_start_item">Start Work Order Item</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_prev">Previous</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_fragment_environment">Environmental Conditions</string>
    <string name="title_fragment_employees">Employees</string>
    <string name="title_fragment_work_order_items">Work Order Items</string>
    <string name="title_fragment_zeus_part_1">Zeus Part 1 Assessment</string>
    <string name="title_fragment_zeus_part_1_preliminary">Preliminary Zeus Part 1 Assessment</string>
    <string name="title_fragment_zeus_part_1_final">Final Zeus Part 1 Assessment</string>
    <string name="title_fragment_zeus_part_2">Zeus Part 2 Assessment</string>
    <string name="title_fragment_finish">Finish</string>
    <string name="title_fragment_tasks">Tasks</string>
    <string name="title_fragment_work">Work Items</string>
    <string name="empty_string">null</string>
    <string name="not_available">n/a</string>
    <string name="placeholder_not_set">Not set</string>
    <string name="hint_comment">Enter a Comment</string>
    <string name="contact_work_order">Work order</string>
    <string name="contact_power_plant">Power plant</string>
    <string name="contact_energy_system">Energy system</string>
    <string name="contact_client">Client</string>
    <string name="contact_contractor">Contractor</string>
    <string name="contact_operator">Operator</string>
    <string name="contact_owner">Owner</string>
    <string name="contact_manufacturer">Manufacturer</string>
    <string name="final_status">Final Work Order Status</string>
    <string name="final_status_item">Final Work Order Item Status</string>
    <string name="attachment_files">Files:</string>
    <string name="attachment_employee">Employee:</string>
    <string name="employee_responsible_employee">Responsible Employee</string>
    <string name="employee_missing_skills">Missing Skills:</string>
    <string name="energy_system_address">Address:</string>
    <string name="energy_system_date_of_manufacture">Date of Manufacture:</string>
    <string name="energy_system_end_of_warranty">End of Warranty:</string>
    <string name="energy_system_hub_height">Hub Height:</string>
    <string name="energy_system_id">Energy System ID:</string>
    <string name="energy_system_manufacturer">Manufacturer:</string>
    <string name="energy_system_operational_since">Operational since:</string>
    <string name="energy_system_operator">Operator:</string>
    <string name="energy_system_owner">Owner:</string>
    <string name="energy_system_rated_power">Rated Power:</string>
    <string name="energy_system_rotor_diameter">Rotor Diameter:</string>
    <string name="energy_system_serial_number">Serial Number:</string>
    <string name="energy_system_series">Series:</string>
    <string name="energy_system_start_of_warranty">Start of Warranty:</string>
    <string name="energy_system_source">Source:</string>
    <string name="energy_system_type">Type:</string>
    <string name="energy_system_wae_nis">WEA NIS:</string>
    <string name="environment_description">Description:</string>
    <string name="environment_wind_speed">Wind speed:</string>
    <string name="environment_wind_speed_unit">m/s</string>
    <string name="environment_wind_direction">Wind direction:</string>
    <string name="environment_wind_direction_unit">°</string>
    <string name="environment_probability_of_rain">Probability of Rain:</string>
    <string name="environment_probability_of_rain_unit">%</string>
    <string name="environment_amount_of_precipitation">Amount of precipitation:</string>
    <string name="environment_amount_of_precipitation_unit">mm</string>
    <string name="environment_humidity">Humidity:</string>
    <string name="environment_humidity_unit">%</string>
    <string name="environment_cloud_cover">Cloud cover:</string>
    <string name="environment_atmospheric_pressure">Atmospheric pressure:</string>
    <string name="environment_atmospheric_pressure_unit">hPa</string>
    <string name="environment_mean_temperature">Mean temperature:</string>
    <string name="environment_mean_temperature_unit">°C</string>
    <string name="environment_min_temperature">Min temperature:</string>
    <string name="environment_min_temperature_unit">°C</string>
    <string name="environment_max_temperature">Max temperature:</string>
    <string name="environment_max_temperature_unit">°C</string>
    <string name="environment_wind_chill">Wind chill:</string>
    <string name="environment_wind_chill_unit">°C</string>
    <string name="environment_depth_of_snow">Depth of snow:</string>
    <string name="environment_depth_of_snow_unit">cm</string>
    <string name="environment_water_current">Water current:</string>
    <string name="environment_water_current_unit">m/s</string>
    <string name="environment_wave_height">Wave height:</string>
    <string name="environment_wave_height_unit">m</string>
    <string name="environment_wave_period">Wave period:</string>
    <string name="environment_wave_period_unit">s</string>
    <string name="environment_sunrise">Sunrise:</string>
    <string name="environment_sunset">Sunset:</string>
    <string name="environment_low_tide">Low tide:</string>
    <string name="environment_high_tide">High tide:</string>
    <string name="equipment_last_checks">Last checks or work</string>
    <string name="equipment_date_of_installation">Date of installation</string>
    <string name="equipment_Date_of_removal">Date of removal</string>
    <string name="equipment_information_name">Name of installed equipment:</string>
    <string name="equipment_information_type">Type as stated by the manufacturer:</string>
    <string name="equipment_information_type_short">Type:</string>
    <string name="equipment_information_series">Series as stated by the manufacturer:</string>
    <string name="equipment_information_series_short">Series:</string>
    <string name="equipment_information_item_number">Item number of equipment:</string>
    <string name="equipment_information_gtin">Global trade item number:</string>
    <string name="equipment_information_serial_number">Serial number as stated by the manufacturer:</string>
    <string name="equipment_information_serial_number_short">Serial Number:</string>
    <string name="equipment_information_date_of_manufacture">Date of manufacture:</string>
    <string name="equipment_information_start_of_warranty">Start date of warranty period:</string>
    <string name="equipment_information_end_of_warranty">End date of warranty period:</string>
</resources>