<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.example.ghost005.serviceclient.activities.TaskActivity">
	<item
		android:id="@+id/action_record"
		android:icon="@drawable/ic_mic_white_24dp"
		android:orderInCategory="1"
		android:title="@string/action_record"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_camera"
		android:icon="@drawable/ic_camera_alt_white_24dp"
		android:orderInCategory="2"
		android:title="@string/action_camera"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_scan"
		android:icon="@drawable/ic_qrcode_white_24dp"
		android:orderInCategory="3"
		android:title="@string/action_scan_code"
		app:showAsAction="ifRoom" />

</menu>