<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.example.ghost005.serviceclient.dialogs.SeekBarDialogFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/edit_pattern_margin">

		<TextView
			android:id="@+id/text_view_dialog_sub_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/edit_pattern_margin"
			android:text="@string/not_available"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/text_view_dialog_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_margin="@dimen/edit_pattern_margin"
				android:minWidth="20dp"
				android:text="@string/empty_string"
				android:textAppearance="?android:attr/textAppearanceLarge" />

			<SeekBar
				android:id="@+id/seek_bar_dialog"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/edit_pattern_margin"
				android:layout_weight="1"
				android:indeterminate="false"
				android:max="10" />

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_dialog_cancel"
			style="@android:style/Widget.DeviceDefault.Light.ActionButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="0.5"
			android:text="@string/dialog_cancel"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/button_dialog_ok"
			style="@android:style/Widget.DeviceDefault.Light.ActionButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="0.5"
			android:text="@string/dialog_ok"
			android:textAppearance="?android:attr/textAppearanceLarge" />

	</LinearLayout>

</LinearLayout>